--- a/Task7/index.html
+++ b/Task7/index.html
@@ -9,24 +9,24 @@
 <body>
     <h1>Registration Form</h1>
     <form action="">
-        <label for="fname">Full Name</label>
-        <input type="text" name="fname" id="fname"><br>
-        <label for="uname">Userame</label>
-        <input type="text" name="uname" id="uname"><br>
-        <label for="pwd">Password</label>
-        <input type="password" name="pwd" id="pwd"><br>
-        <label for="rpwd">Re-Password</label>
-        <input type="password" name="rpwd" id="rpwd"><br>
-        <label for="address">Address</label>
-        <input type="text" name="address" id="address"><br>
-        <label for="age">Age</label>
-        <input type="number" name="age" id="age"><br>
+        <label for="fname">Full Name</label>&nbsp &nbsp &nbsp &nbsp &nbsp
+        <input type="text" name="fname" id="fname"><br><br>
+        <label for="uname">Userame</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+        <input type="text" name="uname" id="uname"><br><br>
+        <label for="pwd">Password</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+        <input type="password" name="pwd" id="pwd"><br><br>
+        <label for="rpwd">Re-Password</label>&nbsp &nbsp &nbsp
+        <input type="password" name="rpwd" id="rpwd"><br><br>
+        <label for="address">Address</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
+        <input type="text" name="address" id="address"><br><br>
+        <label for="age">Age</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp
+        <input type="number" name="age" id="age"><br><br>
         
-        <label for="state">Gender : </label>
+        <label for="state">Gender : </label>&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         <select name="g" id="g">
             <option value="Male">Male</option>
             <option value="Female">Female</option>
-        </select><br>
+        </select><br><br>
         
         <button>Submit</button>
     </form>
