--- a/Task7/index.html
+++ b/Task7/index.html
@@ -10,17 +10,17 @@
     <h1>Registration Form</h1>
     <form action="">
         <label for="fname">Full Name</label>&nbsp &nbsp &nbsp &nbsp &nbsp
-        <input type="text" name="fname" id="fname"><br><br>
+        <input type="text" name="fname" id="fname" value="Vincent Maverick Durano"><br><br>
         <label for="uname">Userame</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-        <input type="text" name="uname" id="uname"><br><br>
+        <input type="text" name="uname" id="uname" value="Vinz"><br><br>
         <label for="pwd">Password</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-        <input type="password" name="pwd" id="pwd"><br><br>
+        <input type="password" name="pwd" id="pwd" value="12345678"><br><br>
         <label for="rpwd">Re-Password</label>&nbsp &nbsp &nbsp
-        <input type="password" name="rpwd" id="rpwd"><br><br>
+        <input type="password" name="rpwd" id="rpwd" value="12345678"><br><br>
         <label for="address">Address</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp
-        <input type="text" name="address" id="address"><br><br>
+        <input type="text" name="address" id="address" value="Cebu, Phillippines"><br><br>
         <label for="age">Age</label>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp&nbsp &nbsp
-        <input type="number" name="age" id="age"><br><br>
+        <input type="number" name="age" id="age" value="22"><br><br>
         
         <label for="state">Gender : </label>&nbsp &nbsp &nbsp &nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
         <select name="g" id="g">
