--- a/Task8/index.html
+++ b/Task8/index.html
@@ -5,57 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        form{
-            border: 1px solid black;
-            border-collapse: collapse;
-        }
-        p,label,input{
-            border: 1px solid black;
-        }
-    </style>
 </head>
 <body>
-    <h1>Registration Form</h1>
-    <form action="">
-        <label for="fname">First Name</label>
-        <input type="text" name="fname" id="fname"><br>
-        <label for="lname">Last Name</label>
-        <input type="text" name="lname" id="lname"><br>
-        <label for="mail">Email</label>
-        <input type="email" name="mail" id="mail"><br>
-        <p>Gender :   </p>
-        <input type="radio" name="g" id="male" value="male">
-        <label for="male">Male</label>
-        <input type="radio" name="g" id="female" value="female">
-        <label for="female">Female</label><br>
-        <label for="age">Age</label>
-        <input type="number" name="age" id="age"><br>
-        <label for="phn">Phone Number</label>
-        <input type="number" name="phone" id="phn"><br>
-        <label for="address">Address</label>
-        <textarea name="address" id="address" cols="30" rows="10"></textarea><br>
-        <label for="state">State</label>
-        <select name="state" id="state">
-            <option value="Rajasthan">Rajasthan</option>
-            <option value="Madhya Pradesh">Madhya Pardesh</option>
-        </select><br>
-        <label for="country">Country</label>
-        <select name="country" id="country">
-            <option value="India">India</option>
-        </select>
-        <p>Languages Known :   </p>
-        <input type="checkbox" name="lang" id="eng" value="English">
-        <label for="eng">English</label>
-        <input type="checkbox" name="lang" id="kan" value="Kannada">
-        <label for="kan">Kannada</label>
-        <input type="checkbox" name="lang" id="hin" value="Hindi">
-        <label for="hin">Hindi</label>
-        <input type="checkbox" name="lang" id="tel" value="Telugu">
-        <label for="tel">Telugu</label><br>
-        <input type="checkbox" name="agree" id="agree" required>
-        <label for="agree">I agree to T&C</label><br><br>
-        <input type="submit">
-    </form>
+    <p>;lg,mf;ldfmg</p>
 </body>
 </html>
